tests/negative/typecheck/orelse.orng
// orelse.orng:7:13: error: expected a value of type `Int`, got a value of type `Char`
//     x orelse 4
//            ^
// 
fn main() -> Int {
    let x: ?Char = .some('4')
    x orelse 4
}